--- a/AccountMateWebOrder/Web.config
+++ b/AccountMateWebOrder/Web.config
@@ -4,10 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+
   <connectionStrings>
-    <add name="AM_Sample_CoConnectionString" connectionString="Data Source=DESKTOP-VQRO7RO\SQL2K17_CSAS;Initial Catalog=AM.Sample.Co;Integrated Security=True"
+    <add name="AM_Sample_CoConnectionString" connectionString="Data Source=EWCENIZA\SQLSERV17;Initial Catalog=AM.Sample.Co;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="AM_SysConnectionString" connectionString="Data Source=DESKTOP-VQRO7RO\SQL2K17_CSAS;Initial Catalog=AM.Sys;Integrated Security=True"
+    <add name="AM_SysConnectionString" connectionString="Data Source=EWCENIZA\SQLSERV17;Initial Catalog=AM.Sys;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
